# src/main/java/ru/mail/park/main/ExceptionHandler.java
@@ -3,7 +3,6 @@ package ru.mail.park.main;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.dao.DataAccessException;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 
@@ -14,6 +13,6 @@ public class ExceptionHandler {
     @org.springframework.web.bind.annotation.ExceptionHandler(DataAccessException.class)
     public ResponseEntity  handleDataAccessException(DataAccessException e) {
         logger.error("Exception: ", e);
-        return ResponseEntity.status(HttpStatus.BAD_GATEWAY).body("{}");
+        return ApiResponse.dbError();
     }
 }
